my first commit

--- a/public/modules/customers/views/customer-list-template.html
+++ b/public/modules/customers/views/customer-list-template.html
@@ -22,5 +22,5 @@
     </div>
 </div>
 <div class="alert alert-warning text-center" data-ng-hide="!customers.$resolved || customers.length">
-    No Customers yet, why don't you <a href="/#!/customers/create">create one</a>?
+    No Members yet, why don't you <a href="/#!/customers/create">create one</a>?
 </div>
