--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -3,7 +3,7 @@
 		position: fixed;
 	}
 }
-.remove-account-container {
+.social-account-container {
 	display: inline-block;
 	position: relative;
 }
@@ -13,10 +13,32 @@
 	position: absolute;
 }
 
-.login-form-bg, .signup-form-bg {
-  background-color: white;
-  border: 15px solid;
-  border-radius: 15px;
-  border-color: white;
-  margin-top: 50px
+.login-form-bg {
+
+	border: 15px;
+	border-radius: 15px;
 }
+
+.btn-file {
+	position: relative;
+	overflow: hidden;
+}
+.btn-file input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 100px;
+	text-align: right;
+	filter: alpha(opacity=0);
+	opacity: 0;
+	background: white;
+	cursor: inherit;
+	display: block;
+}
+.user-profile-picture {
+	min-height: 150px;
+	max-height: 150px;
+}
+
