--- a/public/modules/customers/views/create-customer.client.view.html
+++ b/public/modules/customers/views/create-customer.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="CustomersCreateController as customerCtrl">
 
     <div class="modal-header">
-        <h3 class="modal-title">New Customer</h3>
+        <h3 class="modal-title">New Member</h3>
     </div>
 
 
