--- a/public/modules/customers/views/list-customers.client.view.html
+++ b/public/modules/customers/views/list-customers.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="CustomersController as customersCtrl">
     <div class="page-header">
-        <h1>Customers</h1>
+        <h1>Members</h1>
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-8">
@@ -14,7 +14,7 @@
         <div class="col-xs-12 col-sm-4 text-center">
             <button type="button" class="btn btn-success text-center" ng-click="customersCtrl.modalCreate('lg')">
                 <i class="glyphicon glyphicon-user "></i> </br>
-                New Customer
+                New Member
             </button>
         </div>
     </div>
