--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -1,41 +1,63 @@
-<section class="row" data-ng-controller="AuthenticationController">
+<section class = "row" data-ng-controller="AuthenticationController">
+    <h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
+    <div class = "col-md-12 text-center">
+        <a href = "/auth/facebook" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/facebook.png">
+        </a>
+        <a href = "/auth/twitter" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/twitter.png">
+        </a>
+        <a href = "/auth/google" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/google.png">
+        </a>
+        <a href = "/auth/linkedin" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/linkedin.png">
+        </a>
+        <a href = "/auth/github" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/github.png">
+        </a>
+    </div>
+    <h3 class="col-md-12 text-center">Or login with your account</h3>
     <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4 login-form-bg">
-        <h3 class="text-center">Login</h3>
-        <form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+        <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
             <fieldset>
-                <div class="form-group">
-                    <div data-ng-show="error" class="text-center text-danger">
-                        <div class="alert alert-danger" role="alert">
-                            <strong data-ng-bind="error"></strong>
+                <div data-ng-show="error" class = "text-center text-danger">
+                    <strong data-ng-bind="error"></strong>
+                </div>
+                <div class = "form-group">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-user"></i>
+            </span>
+                        <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" required>
+                        <div ng-messages="userForm.username.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Username is required.</p>
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-user"></i>
-                      </span>
-                        <input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-asterisk"></i>
-                      </span>
-                        <input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-                    </div>
-                </div>
-              </br>
-                <div class="text-center form-group">
-                    <button type="submit" class="btn btn-success btn-lg btn-block">Log In</button>
-                </div>
-                <div class="forgot-password">
-                    <a href="/#!/password/forgot">Forgot your password?</a>&nbsp; Or &nbsp;
-                    <a href="/#!/signup">Sign up</a>
-                </div>
 
+                <div class = "form-group">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon" >
+                <i class = "text-muted glyphicon glyphicon-asterisk"></i>
+            </span>
+                        <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" required>
+                        <div ng-messages="userForm.password.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Password is required.</p>
+                        </div>
+                    </div>
+                </div>
+                </br>
+            </fieldset>
+            <div class="text-center form-group">
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+            </div>
+            <div class="text-center forgot-password">
+                <a ui-sref="password.forgot">Forgot your password?</a>
+                </br>
+                <a ui-sref="authentication.signup">Not enrolled? Sign up now.</a>
+            </div>
             </fieldset>
         </form>
     </div>
-</section>
+</div>
