--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -1,64 +1,107 @@
-<section class="row" data-ng-controller="AuthenticationController">
-    <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4 signup-form-bg">
-        <h3 class="text-center">Sign Up</h3>
-        <form name="userForm" data-ng-submit="signup()" class="signin form-horizontal" novalidate autocomplete="off">
+<section class = "row" data-ng-controller="AuthenticationController">
+    <h3 class="col-md-12 text-center">Sign up using your social accounts</h3>
+    <div class = "col-md-12 text-center">
+        <a href = "/auth/facebook" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/facebook.png">
+        </a>
+        <a href = "/auth/twitter" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/twitter.png">
+        </a>
+        <a href = "/auth/google" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/google.png">
+        </a>
+        <a href = "/auth/linkedin" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/linkedin.png">
+        </a>
+        <a href = "/auth/github" class = "undecorated-link">
+            <img src = "modules/users/img/buttons/github.png">
+        </a>
+    </div>
+
+    <h3 class="col-md-12 text-center">Or sign up using your email</h3>
+    <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4 login-form-bg">
+        <form name="userForm" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
             <fieldset>
+                <div class = "form-group">
+                    <div ng-show="error" class="text-center text-danger">
+                        <div class = "alert alert-danger" role ="alert"></div>
+                        <strong ng-bind="error"></strong>
+                    </div>
+                </div>
+
                 <div class="form-group">
-                    <div data-ng-show="error" class="text-center text-danger">
-                        <div class="alert alert-danger" role="alert">
-                            <strong data-ng-bind="error"></strong>
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-star"></i>
+            </span>
+                        <input type="text" id="firstName" name="firstName" class="form-control" ng-model="credentials.firstName" placeholder="First Name" required>
+                        <div ng-messages="userForm.firstName.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">First name is required.</p>
                         </div>
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-star"></i>
-                      </span>
-                        <input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-star"></i>
+            </span>
+                        <input type="text" id="lastName" name="lastName" class="form-control" ng-model="credentials.lastName" placeholder="Last Name"  required>
+                        <div ng-messages="userForm.lastName.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Last name is required.</p>
+                        </div>
                     </div>
                 </div>
+
+
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-star"></i>
-                      </span>
-                        <input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-envelope"></i>
+            </span>
+                        <input type="email" id="email" name="email" class="form-control" ng-model="credentials.email" placeholder="Email" required>
+                        <div ng-messages="userForm.email.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Email address is required.</p>
+                            <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
+                        </div>
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-envelope"></i>
-                      </span>
-                        <input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-user"></i>
+            </span>
+                        <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" required>
+                        <div ng-messages="userForm.username.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Username is required.</p>
+                        </div>
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-user"></i>
-                      </span>
-                        <input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+                    <div class="input-group input-group-lg" show-errors>
+            <span class="input-group-addon">
+                <i class = "text-muted glyphicon glyphicon-asterisk"></i>
+            </span>
+                        <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" popover="{{popoverMsg}}" popover-trigger="focus" password-validator required>
+                        <div ng-messages="userForm.password.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Password is required.</p>
+                            <div ng-repeat="passwordError in passwordErrors">
+                                <p class="help-block error-text" ng-show="userForm.password.$error.requirements">{{passwordError}}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">
-                        <i class="text-muted glyphicon glyphicon-asterisk"></i>
-                      </span>
-                        <input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-                    </div>
+
+                <div class="form-group" ng-show="!userForm.password.$error.required">
+                    <progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></progressbar>
                 </div>
-                </br>
                 <div class="text-center form-group">
-                    <button type="submit" class="btn btn-success btn-lg btn-block">Sign up</button>
-                    </br>&nbsp; Or&nbsp;
-                    </br>
-                    <div class="form-group">
-                        <a href="/#!/signin" class="show-signup"><h4>Sign in</h4></a>
-                    </div>
+                    <button type="submit" class="btn btn-lg btn-primary btn-block"> Sign up</button>
+                    <a ui-sref="authentication.signin" class="show-signup">Already have an account? Sign in.</a>
                 </div>
+
             </fieldset>
         </form>
     </div>
